dark mode and bug fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,31 +46,6 @@
     word-spacing: 1.5rem;
 }
 
-
-/* select {
-    appearance: none;
-    outline: 0;
-    background: green;
-    background-image: none;
-    width: 100%;
-    height: 100%;
-    color: black;
-    cursor: pointer;
-    border: 1px solid black;
-    border-radius: 3px;
+*{
+    @apply transition-colors duration-150;
 }
-
-.select {
-    position: relative;
-    display: block;
-    width: 15em;
-    height: 2em;
-    line-height: 3;
-    overflow: hidden;
-    border-radius: .25em;
-    padding-bottom: 10px;
-}
-
-h1 {
-    color: green;
-} */
